--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-BR">
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Opções — Bootcamp Helper</title>
+<title>Opções — Note Saver</title>
 <link rel="stylesheet" href="../styles/global.css"></head>
 <body>
 <h1>Opções</h1>
